--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainBackgroundColor"
-    tools:context=".MainActivity">
+    android:paddingRight="@dimen/_18sdp"
+    android:orientation="vertical"
+    android:background="@color/colorPrimary"
+    android:paddingLeft="@dimen/_18sdp"
+    tools:context=".activity.MainActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/hello"
+       android:layout_marginTop="@dimen/_18sdp"
+       android:textColor="@color/colorAccent"
+       android:textSize="@dimen/_18ssp"/>
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/all_tasks"
+       fontPath="fonts/nunito_extra_bold.ttf"
+       android:textStyle="bold"
+       android:textColor="@color/colorAccent"
+       android:textSize="@dimen/_26ssp"
+       tools:ignore="MissingPrefix" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right|center"
+            android:background="@drawable/calendar"
+            android:id="@+id/calendar"/>
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/today_s_task"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:paddingBottom="100dp"
-            tools:listitem="@layout/rcv_item"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:id="@+id/noDataImage"
+                android:layout_gravity="center"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/taskRecycler"/>
+
+        </FrameLayout>
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="70dp"
+       android:text="Add Task"
+       android:drawablePadding="10dp"
+       android:paddingTop="10dp"
+       android:id="@+id/addTask"
+       android:layout_gravity="center"
+       android:textColor="@color/colorAccent"
+       android:textSize="20sp"
+       android:drawableLeft="@drawable/ic_add_black_24dp"
+       android:textAlignment="center"
+       android:layout_weight="0.5"
+       android:layout_marginBottom="20dp"/>
+
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/addTaskBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/black"
-        android:contentDescription="@string/taskadding"
-        android:text="@string/add_task"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:icon="@drawable/baseline_add_24"
-        app:iconSize="25dp"
-        app:iconTint="@color/white"
-        tools:ignore="TouchTargetSizeCheck" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
